<resources>
    <string name="app_name">About Me App</string>

    <string name="action_settings">Settings</string>

    <string name="click">Click a Button to get started...</string>

    <string name="intro">Introduction</string>
    <string name="edu">Education</string>
    <string name="cuisine">Favorite Cuisine</string>
    <string name="books">Books</string>
    <string name="digital">Digital Interests</string>

    <string name="introText">Greetings, my name is Deigen Villalobos. I am currently 16 years of age and live in Sandy, UT with my family of 5. I attend High school and am a Junior at the moment with plans to graduate and go to college. Along with reading and a few sports, I enjoy taking part on digital hobbies such as video games. Movies and TV-shows included as well. I debate, draw, run, and read, all in my spare time.</string>
    <string name="eduText">Greetings, my name is Deigen Villalobos. I am currently 16 years of age and live in Sandy, UT with my family of 5. I attend High school and am a Junior at the moment with plans to graduate and go to college. Along with reading and a few sports, I enjoy taking part on digital hobbies such as video games. Movies and TV-shows included as well. I debate, draw, run, and read, all in my spare time.</string>
    <string name="cuisineText">Cuisine is most likely too fancy a word for the food I enjoy.  I will try just about anything, be it fancy or not, and then form an opinion from then on out. My favorites are typically types of ethnic foods such as Thai, Oriental, Latin, and more. Below is pictured what you\'d call an "Arepa", a typical dish from my native Venezuelan culture, and a personal favorite of mine.</string>
    <string name="booksText">Among my many tech based hobbies, I enjoy a number of other activities. Reading has always been enjoyable, some of my favorite books include: The Alex Rider series, Area 7, and Both Infinity Blade Novels.</string>
    <string name="digitalText">I enjoy a variety of digital media , such as video games as I mentioned before. Some of which are pictured below: Infinity Blade and The Ace Attorney series. Both have exquisite stories and great gameplay. Along with these I play games from both the Metroid and Zelda series, with my favorite entries being Twilight Princess, Ocarina of Time, Majora\'s Mask, Super Metroid, Other M, and Prime 3. As far as movies and shows go, my favorites include The Star Wars Saga, and a number of Japanese anime series.</string>
</resources>

